--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="assets/img/ico.png">
+    <!-- <link rel="shortcut icon" href="assets/img/ico.png"> -->
 </head>
 <body>
-    <h1>Hello, my Friend!</h1>
+    <div class="container">
+        <div id ="root"></div>
+    </div>
+    <!-- <h1>Hello, my Friend!</h1>
     <h2>Look at it!</h2>
     <img src="./assets/img/maxresdefault.jpg" alt="Hello" width="500">
-    <div class="cover"></div>
+    <div class="cover"></div> -->
 </body>
 </html>
